--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "license": "MIT",
   "dependencies": {
     "apollo-server-express": "2.4.0",
+    "bcrypt": "^5.0.1",
     "bcrypt-nodejs": "^0.0.3",
     "cors": "2.8.5",
     "dotenv": "6.1.0",
